--- a/docs/package.json
+++ b/docs/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,14 @@
   "bugs": {
     "url": "https://github.com/agpritts/challenge10-team-profile-generator/issues"
   },
-  "homepage": "https://github.com/agpritts/challenge10-team-profile-generator#readme"
+  "homepage": "https://github.com/agpritts/challenge10-team-profile-generator#readme",
+  "dependencies": {
+    "email-validator": "^2.0.4",
+    "inquirer": "^8.2.4",
+    "joi": "^17.6.0",
+    "node": "^17.7.2"
+  },
+  "devDependencies": {
+    "jest": "^28.1.0"
+  }
 }
